chore: more changes
Signed-off-by: Tierney Cyren <hello@bnb.im>

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,6 @@
 ---
-const title = 'lastweek.dev'
+const title = 'About lastweek.dev'
 ---
-
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -11,10 +10,10 @@ const title = 'lastweek.dev'
     <title>{title}</title>
   </head>
   <body>
-		<a href="/">Home</a>
+    <a href="/">Home</a>
 		<a href="/about/">About</a>
 		<a href="/posts/">Posts</a>
-    <h1>{title}</h1>
+    <h1>${title}</h1>
   </body>
 </html>
 
