--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -1,5 +1,5 @@
 ---
-const title = 'lastweek.dev'
+const title = 'Posts on lastweek.dev'
 ---
 
 <html lang="en">
@@ -15,6 +15,7 @@ const title = 'lastweek.dev'
 		<a href="/about/">About</a>
 		<a href="/posts/">Posts</a>
     <h1>{title}</h1>
+    <p>here's the posts</p>
   </body>
 </html>
 
